Added settings to handle cycles. Added xml serialization.

--- a/TrackableSerializationDemo/TrackableSerializationDemo.csproj
+++ b/TrackableSerializationDemo/TrackableSerializationDemo.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -72,6 +73,9 @@
       <Project>{98f8c001-e6a2-4692-a2a1-8ae6e1d1ec62}</Project>
       <Name>TrackableSerializationDemo.Entities.Shared.Net45</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="orders.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
