--- a/TrackableSerializationDemo/TrackableSerializationDemo.csproj
+++ b/TrackableSerializationDemo/TrackableSerializationDemo.csproj
@@ -60,8 +60,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangeTrackingExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializableChangeTrackingCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
