--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 name: Trackable Serialization Demo
 markdown: redcarpet
 highlighter: pygments
+encoding: UTF-8
 baseurl: /demo-trackable-serialization
