Serialize Graph inner collections

--- a/TrackableSerializationDemo/App.config
+++ b/TrackableSerializationDemo/App.config
@@ -14,6 +14,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="NorthwindSlim" connectionString="data source=.\sqlexpress;initial catalog=NorthwindSlim;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="NorthwindSlim" connectionString="data source=PC7017BIS;initial catalog=NorthwindSlim;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
